hra/patternlab/site/sass/molecules/_site-header.scss
/*------------------------------------*\
    $SITE HEADER
\*------------------------------------*/

.site-header {
    position: relative;
    z-index: $z-zeta;
    width: 100%;
    padding: 20px 5%;
    background-color: rgba(255, 255, 255, 0.98);

    @include media-query(desktop) {
        padding: 20px;
    }

    @include media-query(laptop) {
        height: 100px;
        background-color: #fff;
    }

    @include media-query(mobile) {
        height: 64px;
        padding: 0;
    }

    &__logo {
        display: inline-block;

        > span {
            @include hidden;
        }

        @include media-query(mobile) {
            margin: 17px 0 0 15px;

            svg {
                width: 100px;
                height: 43px;
            }
        }
    }

    &__right {
        margin-top: 7px;
        text-align: right;

        @include media-query(mobile) {
            margin-top: 0;
        }
    }

    &__form {
        position: relative;
        display: inline-block;
        margin: 0 0 0 55px;
        vertical-align: -16px;

        @include media-query(desktop) {
            margin-left: 30px;
        }

        @include media-query(laptop) {
            margin-left: 0;
        }

        @include media-query(mobile) {
            vertical-align: top;
        }
    }

    &__search {
        @include placeholder-text {
            @include font-size(zeta);
            font-family: $font--primary;
            color: #fff;
            opacity: 1;
        }

        display: inline-block;
        padding: 11px 40px 11px 20px;
        color: #fff;
        background-color: $color--primary;
        border: 2px solid transparent;
        border-radius: 35px;
        transition: color $default-transition-speed ease, background-color $default-transition-speed ease, border-color $default-transition-speed ease;

        &:focus {
            @include placeholder-text {
                color: $color--primary;
            }

            color: $color--primary;
            background-color: transparent;
            border-color: $color--primary;
        }

        &:focus + input[type='submit'] {
            background: {
                image: url('../images/svg/search-blue.svg');
            }
        }

        @include media-query(mobile) {
            width: 100%;
            padding: 20px;
            border-radius: 0;

            &:focus {
                color: #fff;
                background-color: $color--primary;
                border-color: transparent;
            }

            &:focus + input[type='submit'] {
                background: {
                    image: url('../images/svg/search-.svg');
                }
            }
        }
    }

    &__search-label {
        @include hidden;
    }

    &__submit {
        position: absolute;
        top: 0;
        right: 0;
        width: 53px;
        height: 100%;
        cursor: pointer;
        background: {
            position: center;
            color: transparent;
            size: 18px;
            repeat: no-repeat;
            image: url('../images/svg/search.svg');
        }
        border: 0;
        transition: opacity $default-transition-speed;

        &:hover {
            opacity: 0.7;
        }
    }
}

